--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Practing the CSS, HTML and Javascript skills that I have been learning">
         <meta name="author" content="Victor Hugo Zaninette Bernardino">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="icomoon/style.css" rel="stylesheet">
         <link href="css/estilo.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
     </head>
@@ -30,7 +31,6 @@
                     </li>
                     <li class="v-nav">Languages</li>
                     <li class="v-nav">Certificates</li>
-                    <li class="v-nav">Contact</li>
                 </ul>
             </nav>
         </header>
@@ -109,14 +109,26 @@
                     <img>
                     <p></p>
                 </div>
-                <article>
-                    <h1 id="contact">Contact</h1>
-                </article>
             </article>
         </section>
 
         <footer>
-            
+            <ul>
+                <li>
+                    <span class="icon-mobile2"></span><span class="hidden">Celular</span>
+                     (11) 95117-0831
+                </li>
+                <li>
+                    <span class="icon-envelop"></span><span class="hidden">Email</span>
+                     vhugoz1@hotmail.com
+                </li>
+                <li>
+                    <a href="https://github.com/VictorHugoZB" target="_blank"><span class="icon-github"></span></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/victor-hugo-zaninette-bernardino-0a28011a6/" target="_blank"><span class="icon-linkedin"></span></a>
+                </li>
+            </ul>
         </footer>
     </body>
     <script src="javascript/control.js" type="text/javascript"></script>
