Fazendo mudanças gerais no visual e no conteúdo. Adicionando arquivo para o currículo.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <li class="v-nav">My objectives</li>
                         </ul>
                     </li>
-                    <li class="v-nav">Languages</li>
+                    <li class="v-nav">Programming</li>
                     <li class="v-nav">Certificates</li>
                 </ul>
             </nav>
@@ -39,24 +39,26 @@
             <h1 id="about-page">About this page</h1>
             <article>
                 <h2 id="page">What is this page?</h2>
-                <p>I am currently taking a fullstack web development course at Impacta and the first module is about front-end web development, so we're now studying mostly HTML, CSS and Javascript. I created this page so I could practice the knowledge I have been acquiring, and also make it my first project on GitHub. The idea is to start a portfolium, adding new projects as I learn new technologies and increse my knowledge. This page is not meant to be formal nor substitute my curriculum, but anyway, I will use it to present myself and my studies.</p>
+                <p>I am currently taking a fullstack web development course at Impacta and the first module was about front-end web development, so we have studied mostly HTML, CSS and Javascript. I created this page so I could practice the knowledge I have been acquiring, and also make it my first project on GitHub. The idea is to start a portfolium, adding new projects as I learn new technologies and increse my knowledge. This page is not meant to be formal nor replace my curriculum, but anyway, I will use it to present myself and my studies.</p>
             </article>
+            <hr>
             <h1 id="about-me">About me</h1>
             <article>
                 <h2 id="me">Who am I?</h2>
-                <p>I am a student at Federal University of ABC. I am a step to graduate in Science & Technology Bachelor, which is a needed graduation before you can .... At high school I found out I really liked math, and that I liked to keep thinking about math problems, even if I couldn't solve some of them. I even intended to be a math teacher for some time, since I always liked to explain the subjects I knew for other students and friends (that's also why I am a monitor at university, helping other students at exercises related to programming logic). Anyway, computer science had always been an option too. At university I had contact with programming logic and enjoyed it a lot, that was what made me finally choose my computer science graduation, a choice I do not regret. </p>
+                <p>I am a student at Federal University of ABC (UFABC). I am graduating with a Science & Technology Bachelor's degree, which is required in order to graduate in a specific area. I will also graduate with a Computer Science bachelor's degree, which I have already done many of the disciplines. At high school I found out I really liked math, and I liked to keep thinking about math problems, even if I couldn't solve some of them. I even intended to be a math teacher for some time, since I always liked to explain what I knew to other students and friends. That's also why I am a monitor at university, helping other students with exercises related to programming logic. But still, computer science had always been an option too. At university, the interdisciplnarity of the Bachelor in Science & Technology have put me in contact with many different subjects, including programming logic, which I enjoyed since my first experience with it. That was what made me finally choose my computer science graduation, a choice I do not regret. </p>
             </article>
             <article>
                 <h2 id="objectives">What are my objectives?</h2>
-                <p>Nothing describes better my main objective now than "get into the programming world". I'm ALWAYS willing to learn new things, and I'm studying a lot to be part of it. I'm also looking for a job (specially as an intern) so I can experience how is the schedule of a programmer, and also be in contact to real systems, seeing they working in a real application. </p>
+                <p>Nothing describes better my main objective now than "get into the programming world". I'm ALWAYS willing to learn more, and I'm looking for a internship opportunity so I can experience the schedule of a programmer, and also be in contact to real systems, seeing them working in a real application. </p>
             </article>
+            <hr>
             <article>
                 <h1 id="languages">My knowledge with languages</h1>
                 <table>
                     <thead>
                         <tr>
                             <th>Language</th>
-                            <th>Contact I've had with it</th>
+                            <th>My experience with it</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -66,11 +68,11 @@
                         </tr>
                         <tr>
                             <td>CSS</td>
-                            <td>Intermediate - Advanced: Just as HTML - I'm studying CSS in my fullstack web development course at Impacta, and I have also studied it in a front-end web design course in Udemy.</td>
+                            <td>Intermediate - Advanced: Same as HTML - I'm studying CSS in my fullstack web development course at Impacta, and I have also studied it in a front-end web design course in Udemy.</td>
                         </tr>
                         <tr>
                             <td>Javascript</td>
-                            <td>Basic: I started to learn it lately.</td>
+                            <td>Basic knowledge - I practiced a little bit while making this page!.</td>
                         </tr>
                         <tr>
                             <td>Java</td>
@@ -87,6 +89,7 @@
                     </tbody>
                 </table>
             </article>
+            <hr>
             <article>
                 <h1 id="certificates">Certificates</h1>
                 <div class="master" id="c-div">
@@ -110,6 +113,8 @@
                     <p></p>
                 </div>
             </article>
+            <hr>
+            <p class="curriculum"><a target="_blank" href="docs/CV-VictorHugoZB.pdf">Get my curriculum here.</a></p>
         </section>
 
         <footer>
