Corrigindo alguns textos

--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
         <section>
             <h1 id="about-page">About this page</h1>
             <article>
-                <h2 id="page">What is this page?</h2>
+                <h2 id="page">What is this page about?</h2>
                 <p>I am currently taking a fullstack web development course at Impacta and the first module was about front-end web development, so we have studied mostly HTML, CSS and Javascript. I created this page so I could practice the knowledge I have been acquiring, and also make it my first project on GitHub. The idea is to start a portfolium, adding new projects as I learn new technologies and increse my knowledge. This page is not meant to be formal nor replace my curriculum, but anyway, I will use it to present myself and my studies.</p>
             </article>
             <hr>
             <h1 id="about-me">About me</h1>
             <article>
                 <h2 id="me">Who am I?</h2>
-                <p>I am a student at Federal University of ABC (UFABC). I am graduating with a Science & Technology Bachelor's degree, which is required in order to graduate in a specific area. I will also graduate with a Computer Science bachelor's degree, which I have already done many of the disciplines. At high school I found out I really liked math, and I liked to keep thinking about math problems, even if I couldn't solve some of them. I even intended to be a math teacher for some time, since I always liked to explain what I knew to other students and friends. That's also why I am a monitor at university, helping other students with exercises related to programming logic. But still, computer science had always been an option too. At university, the interdisciplnarity of the Bachelor in Science & Technology have put me in contact with many different subjects, including programming logic, which I enjoyed since my first experience with it. That was what made me finally choose my computer science graduation, a choice I do not regret. </p>
+                <p>I am a student at Federal University of ABC (UFABC). I am graduating with a Science & Technology Bachelor's degree, which is required in order to graduate in a specific area. I will also graduate with a Computer Science bachelor's degree, which I have already taken many of the disciplines. At high school I found out I really liked math, and I liked to keep thinking about math problems, even if I couldn't solve some of them. I even intended to be a math teacher for some time, since I always liked to explain what I knew to other students and friends. That's also why I am a monitor at university, helping other students with exercises related to programming logic. But still, computer science had always been an option too. At university, the interdisciplinarity of the Bachelor in Science & Technology have put me in contact with many different subjects, including programming logic, which I enjoyed since my first experience with it. That was what made me finally choose my computer science graduation, a choice I do not regret. </p>
             </article>
             <article>
-                <h2 id="objectives">What are my objectives?</h2>
-                <p>Nothing describes better my main objective now than "get into the programming world". I'm ALWAYS willing to learn more, and I'm looking for a internship opportunity so I can experience the schedule of a programmer, and also be in contact to real systems, seeing them working in a real application. </p>
+                <h2 id="objectives">My objectives</h2>
+                <p>Nothing describes better my main objective now than "get into the programming world". I'm ALWAYS willing to learn more, and I'm looking for an internship opportunity so I can experience the schedule of a programmer, and also be in contact to real systems, seeing them working in a real application. </p>
             </article>
             <hr>
             <article>
-                <h1 id="languages">My knowledge with languages</h1>
+                <h1 id="languages">Programming experiences</h1>
                 <table>
                     <thead>
                         <tr>
-                            <th>Language</th>
+                            <th>Languages</th>
                             <th>My experience with it</th>
                         </tr>
                     </thead>
