Corrigindo alguns textos novamente

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </tr>
                         <tr>
                             <td>Javascript</td>
-                            <td>Basic knowledge - I practiced a little bit while making this page!.</td>
+                            <td>Basic knowledge - I have been studying Javascript in my fullstack web development course at Impacta and put into practice what I have learned while making this page!</td>
                         </tr>
                         <tr>
                             <td>Java</td>
