Pequenas mudanças no visual

--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
                 <div class="master" id="c-div">
                     <div id="c-udemy">
                         <p>UDEMY</p>
-                        <button class="btn red" id="udemy-c1">Office Essentials</button>
+                        <button class="btn" id="udemy-c1">Office Essentials</button>
                     </div>
                     <div id="c-impacta">
                         <p>IMPACTA</p>
-                        <button class="btn blue" id="impacta-c1">Programming Logic</button>
-                        <button class="btn blue" id="impacta-c1">Logic using Javascript</button>
-                        <button class="btn blue" id="impacta-c1">HTML, CSS, Javascript</button>
+                        <button class="btn" id="impacta-c1">Programming Logic</button>
+                        <button class="btn" id="impacta-c1">Logic using Javascript</button>
+                        <button class="btn" id="impacta-c1">HTML, CSS, Javascript</button>
                     </div>
                     <div id="c-coursera">
                         <p>COURSERA</p>
-                        <button class="btn green" id="coursera-c1">Excel Intermediate</button>
+                        <button class="btn" id="coursera-c1">Excel Intermediate</button>
                     </div>
                 </div>
                 <div id="certificate">
